spec/e2e/method/extra_arguments.lit
type Foo {
  method { |a, b|
    println(a)
    println(b)
  }
}

Foo().method(1, 2, 3, 4) # error: [line 8] Runtime error: Expected 2 arguments but got 4.
